# rail-django-graphql

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTOMATION_GUIDE.md  BOILERPLATE_STRUCTURE_DESIGN.md  CACHE_MIDDLEWARE_DOCUMENTATION.md  CACHING_IMPLEMENTATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DUAL_FIELD_FIX_SUMMARY.md  Dockerfile  Dockerfile.dev  FIX_DOCUMENTATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LIBRARY_STRUCTURE_DESIGN.md  LIBRARY_USAGE_GUIDE.md  LICENSE  MANIFEST.in  README.md  README_SECURITY.md  RELEASE_MANUAL.md  SEPARATION_PLAN.md  SOLUTION_CACHE_RESUME.md  cache_middleware.py  check_conflicts.py  check_data.py  check_input_types.py  check_tables.py  clear_schema_cache.py  comprehensive_test_output2.txt  comprehensive_test_output3.txt  create_missing_client_info.py  db.sqlite3  debug_cache_clearing.py  debug_cache_issue.py  debug_comment_creation.py  debug_create_call.py  (+163 more)
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: auto-tag.yml  ci.yml  deploy.yml  docker.yml  docs.yml  lint.yml  release.yml  security.yml  smoke.yml  tag.yml
.venv_install_test/: pyvenv.cfg
.venv_install_test/Scripts/: activate  activate.bat
benchmarks/: __init__.py  performance_benchmarks.py
deploy/: .env.production.example  docker-compose.development.yml  docker-compose.production.yml
deploy/docker/: Dockerfile.development  Dockerfile.production
deploy/monitoring/: alertmanager.yml  health-check.py  prometheus.yml
deploy/nginx/: nginx.conf
deploy/postgres/: postgresql.conf
deploy/redis/: redis.conf
deploy/scripts/: blue-green-deploy.sh  init-db.sql  rollback.sh  setup-environment.sh
django-graphql-boilerplate/: .env.example  .env.prod  DEPLOYMENT.md  README.md  manage.py  mkdocs.yml
django-graphql-boilerplate/config/: asgi.py  schema.py  urls.py  wsgi.py
django-graphql-boilerplate/deploy/: .env.production.example  docker-compose.production.yml  docker-compose.yml
django-graphql-boilerplate/docs/: configuration.md  index.md  installation.md  usage.md
django-graphql-boilerplate/requirements/: base.txt  development.txt  production.txt  testing.txt
django-graphql-boilerplate/templates/: index.html
django_graphql_auto/: __init__.py  apps.py  asgi.py  decorators.py  health_urls.py  settings.py  urls.py  wsgi.py
django_graphql_auto/core/: config_loader.py  exceptions.py  feature_flags.py  runtime_config.py  schema.py  schema_versioning.py  settings.py
django_graphql_auto/extensions/: health.py  media.py  optimization.py  rate_limiting.py  validation.py  virus_scanner.py
django_graphql_auto/generators/: file_uploads.py  files.py  filters.py  inheritance.py  introspector.py  mutations.py  nested_operations.py  queries.py  types.py
django_graphql_auto/management/: __init__.py
django_graphql_auto/middleware/: performance.py  performance_middleware.py
django_graphql_auto/templates/: health_dashboard.html
django_graphql_auto/tests/: test_health_system.py
django_graphql_auto/views/: __init__.py
docs/: API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  EXAMPLES.md  LICENSE  MULTIPLE_MANAGERS.md  README.md  SECURITY_RECOMMENDATIONS.md  api-reference.md  conf.py  configuration-guide.md  export-guide.md  file-uploads-media.md  graphql-meta-guide.md  index.md  index.rst  nested_filtering_examples.py  performance-monitoring-implementation.md  performance-optimization.md  quick-start.md  requirements.txt
docs/_static/: custom.css
docs/advanced/: custom-scalars.md  (+3 more)
examples/: README.md  advanced_usage.py  basic_usage.py  export_usage.py  github_installation.py  multi_schema_examples.md  multiple_managers_example.py  nested_filtering_examples.py  requirements.txt  security_integration.py
history/: 01_query_naming_conventions_update.md  02_mutation_return_types_standardization.md  03_smart_field_requirements_enhancement.md  04_documentation_updates.md  05_fieldinfo_import_fix.md  06_related_fields_enhancement.md  07_foreignkey_mutation_fix.md  08_pk_field_addition.md  09_recursion_fix_and_direct_relationships.md  10_phase3_advanced_features_implementation.md  README.md
plans/: gemini.md  old_plan.md  upgrade.md
rail-django-graphql/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
rail-django-graphql/.github/: pull_request_template.md
rail-django-graphql/.github/ISSUE_TEMPLATE/: bug_report.md
rail-django-graphql/.github/workflows/: ci.yml  lint.yml  release.yml
rail-django-graphql/examples/: basic_usage.py  github_installation.py
rail-django-graphql/rail_django_graphql/: apps.py  decorators.py  settings.py
rail-django-graphql/rail_django_graphql/core/: __init__.py  schema.py
rail-django-graphql/rail_django_graphql/debugging/: __init__.py
rail-django-graphql/rail_django_graphql/extensions/: auth.py  caching.py  performance_metrics.py  permissions.py
rail-django-graphql/rail_django_graphql/generators/: introspector.py  mutations.py  nested_operations.py
rail-django-graphql/rail_django_graphql/introspection/: __init__.py  schema_comparator.py  schema_introspector.py
rail-django-graphql/rail_django_graphql/management/: __init__.py  backup_manager.py  migration_manager.py  schema_manager.py
rail-django-graphql/rail_django_graphql/tests/: test_health_system.py
rail-django-graphql/rail_django_graphql/tests/unit/: test_decorators.py  test_generators.py
rail_django_graphql/: __init__.py  apps.py  asgi.py  conf.py  decorators.py  defaults.py  health_urls.py  models.py  schema.py  security_config.py  settings.py  urls.py  wsgi.py
scripts/: deploy.py  health_check.py  init-db.sql  rollback.py
test_app/: apps.py  auto_schema.py  models.py  schema.py
tests/: admin.py  apps.py  conftest.py  models.py  schema.py  settings.py  test_file_uploads.py  test_media_management.py  test_method_mutations.py  test_nested_field_filtering.py  test_nested_filtering_edge_cases.py  test_nested_filtering_performance.py  test_performance_optimization.py  urls.py  views.py
tests_unified/: __init__.py
(+348 files in other folders)
