# Setup configuration for Rail Django GraphQL

[metadata]
name = rail-django-graphql
version = 1.0.2
description = A powerful Django library for automatic GraphQL API generation with advanced features
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raillogistic/rail-django-graphql
author = Rail Django GraphQL Contributors
author_email = contributors@rail-django-graphql.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
    docs*
    examples*

# Flake8 configuration
[flake8]
max-line-length = 100
max-complexity = 10
exclude =
    .git,
    __pycache__,
    .tox,
    .eggs,
    *.egg,
    build,
    dist,
    .venv,
    venv,
    migrations,
    node_modules
ignore =
    # Line break before binary operator (conflicts with black)
    W503,
    # Line break after binary operator (conflicts with black)
    W504,
    # Whitespace before ':' (conflicts with black)
    E203,
    # Multiple imports on one line
    E401,
per-file-ignores =
    # Ignore import order in __init__.py files
    __init__.py:F401,E402
    # Ignore line length in migrations
    */migrations/*.py:E501
    # Ignore complexity in tests
    tests/*.py:C901
    # Ignore docstring requirements in tests
    tests/*.py:D100,D101,D102,D103,D104,D105,D106,D107

# Import order configuration
import-order-style = google
application-import-names = rail_django_graphql

# Docstring configuration
docstring-convention = google
strictness = short

# Additional flake8 plugins configuration
# flake8-bugbear
extend-ignore = B008

# flake8-import-order